--- a/flask/fundamentals/checkers/templates/checker.html
+++ b/flask/fundamentals/checkers/templates/checker.html
@@ -10,14 +10,14 @@
 
         .box1 {
             background-color: {{color1}};
-            width: 20px;
-            height: 20px;
+            /* width: 20px;
+            height: 20px; */
     
         }
         .box2 {
             background-color:{{color2}};
-            width: 20px;
-            height: 20px;
+            /* width: 20px;
+            height: 20px; */
         }
         
 
