--- a/flask/fundamentals/html_project/templates/lists.html
+++ b/flask/fundamentals/html_project/templates/lists.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="url_for('static', filename='css/style.css')}}">
-    <title>HTML Table</title>
-</head>
-<body>
-    
-    <h1>Students</h1>
-    <h2>First Name</h2>
-    <h2>Last Name</h2>
-    <h2>Full Name</h2>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="url_for('static',
+            filename='css/style.css')}}">
+        <!-- bootstrap link -->
+            <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+            crossorigin="anonymous">
+        <title>HTML Table</title>
+    </head>
+    <body>
 
-    <!-- <table>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Full Name</th>
-        </tr> -->
-        <ul>
+
+        <!-- <ul>
             {% for student in users %}
             <li>{{student['first_name']}}  {{student['last_name']}}  {{student['first_name'] +  student['last_name']}}
             </li>
             {% endfor %}
-        </ul>
-        <!-- {% for student in users %}
-        <td>{{ student['first_name'] }}
-        </td>
-        <td>{{ student['last_name'] }}
-        </td>
-        <td>{{student['first_name'+'last_name']}}
-        </td>
-        {% endfor %}
-        
-        </tr> -->
-    </table>
-</body>
+        </ul> -->
+        <div class="d-flex p-5 m-3 w-75">
+            <!-- class description in bootstrap above and below this line -->
+            <table class="table table-success table-striped table-bordered ">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Full Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for student in users %}
+                    <tr>
+                        <td>{{ student['first_name'] }}
+                        </td>
+                        <td>{{ student['last_name'] }}
+                        </td>
+                        <td>{{student['first_name']}} {{ student['last_name'] }}
+                        </td>
+                    </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+
+    </body>
 </html>
